@@ -1,4 +1,8 @@
-
+plugins {
+    id("com.android.application")
+    id("org.jetbrains.kotlin.android")
+    id("kotlin-kapt")
+}
 
 android {
     namespace = "com.example.coffeecounter"
@@ -6,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId = "com.example.coffeecounter"
-        minSdk = 23
+        minSdk = 24
         manifestPlaceholders.putAll(
             mapOf(
                 "redirectHostName" to "localhost",
@@ -16,6 +20,7 @@ android {
         targetSdk = 34
         versionCode = 1
         versionName = "1.0"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
@@ -28,33 +33,19 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "17"
         freeCompilerArgs = freeCompilerArgs + listOf(
-            "-Xjvm-default=all"
+            "-Xjvm-default=all",
+            "-opt-in=kotlin.RequiresOptIn"
         )
-    }
-    
-    kotlin {
-        jvmToolchain(17) // Use Java 17 toolchain
     }
     
     kapt {
         useBuildCache = true
-        javacOptions {
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED") 
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED")
-            option("--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED")
-            option("--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED")
-        }
     }
     
     buildFeatures {
@@ -67,8 +58,8 @@ dependencies {
     implementation("androidx.appcompat:appcompat:1.6.1")
     implementation("com.google.android.material:material:1.10.0")
     implementation("androidx.constraintlayout:constraintlayout:2.1.4")
-    implementation("androidx.navigation:navigation-fragment-ktx:2.7.3")
-    implementation("androidx.navigation:navigation-ui-ktx:2.7.3")
+    implementation("androidx.navigation:navigation-fragment-ktx:2.7.4")
+    implementation("androidx.navigation:navigation-ui-ktx:2.7.4")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.6.2")
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2")
     implementation("androidx.room:room-runtime:2.6.0")
@@ -78,7 +69,9 @@ dependencies {
     // Web API
     implementation("com.squareup.retrofit2:retrofit:2.9.0")
     implementation("com.squareup.retrofit2:converter-gson:2.9.0")
-    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.11.0")
 
     testImplementation("junit:junit:4.13.2")
+    androidTestImplementation("androidx.test.ext:junit:1.1.5")
+    androidTestImplementation("androidx.test.espresso:espresso-core:3.5.1")
 }
